--- a/get_rules.ipynb
+++ b/get_rules.ipynb
@@ -51,7 +51,7 @@
     {
       "cell_type": "code",
       "source": [
-        "client = InferenceClient(model_name, token='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')"
+        "client = InferenceClient(model_name, token='')"
       ],
       "metadata": {
         "id": "J8oOPsw5jI8A"
